--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
